// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useResource() should dispatch an action that fetches 1`] = `
Object {
  "meta": Object {
    "key": "GET http://test.com/article-cooler/5",
    "options": undefined,
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "schema": [Function],
    "throttle": true,
    "type": "read",
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useResource() should dispatch fetch when sent multiple arguments 1`] = `
Object {
  "meta": Object {
    "key": "GET http://test.com/article-cooler/5",
    "options": undefined,
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "schema": [Function],
    "throttle": true,
    "type": "read",
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useResource() should dispatch fetch when sent multiple arguments 2`] = `
Object {
  "meta": Object {
    "key": "GET http://test.com/user/",
    "options": undefined,
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "schema": Array [
      [Function],
    ],
    "throttle": true,
    "type": "read",
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useResource() should throw error when response is {} when expecting entity 1`] = `
[Error: Attempted to initialize CoolerArticleResource with substantially different than expected keys

  This is likely due to a malformed response.
  Try inspecting the network response or fetch() return value.

  Expected keys:
    Found: 
    Missing: id,title,content,author,tags
  Unexpected keys: 
  Value: {}]
`;

exports[`useResource() should throw error when response is array when expecting entity 1`] = `
[Error: Attempted to initialize CoolerArticleResource with substantially different than expected keys

  This is likely due to a malformed response.
  Try inspecting the network response or fetch() return value.

  Expected keys:
    Found: 
    Missing: id,title,content,author,tags
  Unexpected keys: 
  Value: {}]
`;

exports[`useResource() should throw error when response is expected Resource inside Record 1`] = `[Error: Resource not found in cache GET http://test.com/article-cooler/400. Likely due to malformed response]`;

exports[`useResource() should throw error when response is nested missing id when expecting nested entity 1`] = `[Error: Resource not found in cache GET http://test.com/article-cooler/400. Likely due to malformed response]`;

exports[`useResource() should throw error when response is nested string when expecting nested entity 1`] = `[Error: Resource not found in cache GET http://test.com/article-cooler/400. Likely due to malformed response]`;

exports[`useResource() should throw error when response is number when expecting entity 1`] = `
[Error: Attempted to initialize CoolerArticleResource with substantially different than expected keys

  This is likely due to a malformed response.
  Try inspecting the network response or fetch() return value.

  Expected keys:
    Found: 
    Missing: id,title,content,author,tags
  Unexpected keys: 
  Value: {}]
`;

exports[`useResource() should throw error when response is string when expecting entity 1`] = `
[Error: Attempted to initialize CoolerArticleResource with substantially different than expected keys

  This is likely due to a malformed response.
  Try inspecting the network response or fetch() return value.

  Expected keys:
    Found: 
    Missing: id,title,content,author,tags
  Unexpected keys: 
  Value: {}]
`;

exports[`useResource() should throw error when response is string when expecting nested entity 1`] = `[Error: Resource not found in cache GET http://test.com/article-cooler/400. Likely due to malformed response]`;
